# Checkers_server

./: CMakeLists.txt  ToastTypeEnum.h  board.cpp  board.h  customexception.cpp  customexception.h  evaluatorbase.cpp  evaluatorbase.h  evaluatordame.cpp  evaluatordame.h  evaluatorpawn.cpp  evaluatorpawn.h  gamemodel.cpp  gamemodel.h  humanparticipant.cpp  humanparticipant.h  humanvshumanroom.cpp  humanvshumanroom.h  humanvsrobotroom.cpp  humanvsrobotroom.h  main.cpp  packettypekeeperservice.cpp  packettypekeeperservice.h  participant.cpp  participant.h  positionevaluator.cpp  positionevaluator.h  robotparticipant.cpp  robotparticipant.h  robotstepcalculator.cpp  robotstepcalculator.h  roombase.cpp  roombase.h  server.cpp  server.h  useablepiecefinder.cpp  useablepiecefinder.h  validatorbase.cpp  validatorbase.h  validatordame.cpp  (+3 more)
